--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
+  <meta name="twitter:site" content="@coinpallace" />
   <meta property="og:image" content="assets/images/index-meta.jpg">
+  <meta property="og:title" content="coinpallace.com - Time Vision Indicator TradingView" />
+  <meta property="og:description" content="Meet Time Vision, our CoinPallace Buy/Sell Indicator. Works on all Tradingview markets. Simply the best" /> 
+  <meta property="og:url" content="https://coinpallace.com" />
+  <meta property="og:site_name" content="CoinPallace.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1920" />
+  <meta property="og:image:height" content="1243" />
+  
+  
   <meta name="twitter:title" content="coinpallace.com - Time Vision Indicator TradingView">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/sem-ttulo-copia-3-122x126.png" type="image/x-icon">
