--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
   <meta name="twitter:site" content="@coinpallace" />
-  <meta property="og:image" content="assets/images/index-meta.jpg">
+  <meta property="og:image" content="https://coinpallace.com/assets/images/index-meta.jpg">
   <meta property="og:title" content="coinpallace.com - Time Vision Indicator TradingView">
   <meta property="og:description" content="Meet Time Vision, our CoinPallace Buy/Sell Indicator. Works on all Tradingview markets. Simply the best"> 
   <meta property="og:url" content="https://coinpallace.com">
