--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
+  <meta name="twitter:image:src" content="https://coinpallace.com/assets/images/index-meta.jpg">
   <meta name="twitter:site" content="@coinpallace" />
   <meta property="og:image" content="https://coinpallace.com/assets/images/index-meta.jpg">
   <meta property="og:title" content="coinpallace.com - Time Vision Indicator TradingView">
