--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <meta name="twitter:image:src" content="https://coinpallace.com/assets/images/index-meta.jpg">
   <meta name="twitter:site" content="@coinpallace" />
   <meta property="og:image" content="https://coinpallace.com/assets/images/index-meta.jpg">
-  <meta property="og:title" content="coinpallace.com - Time Vision Indicator TradingView">
+  <meta property="og:title" content="Time Vision Indicator TradingView - CoinPallace">
   <meta property="og:description" content="Meet Time Vision, our CoinPallace Buy/Sell Indicator. Works on all Tradingview markets. Simply the best"> 
   <meta property="og:url" content="https://coinpallace.com">
-  <meta property="og:site_name" content="CoinPallace.com">
+  <meta property="og:site_name" content="CoinPallace">
   <meta property="og:type" content="website">
-  <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   
