--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="https://coinpallace.com/assets/images/index-meta.jpg">
+  <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
   <meta name="twitter:site" content="@coinpallace" />
-  <meta property="og:image" content="https://coinpallace.com/assets/images/index-meta.jpg">
+  <meta property="og:image" content="assets/images/index-meta.jpg">
   <meta property="og:title" content="Time Vision Indicator TradingView - CoinPallace">
   <meta property="og:description" content="Meet Time Vision, our CoinPallace Buy/Sell Indicator. Works on all Tradingview markets. Simply the best"> 
   <meta property="og:url" content="https://coinpallace.com">
