--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image:height" content="473">
   
   <meta name="twitter:title" content="coinpallace.com - Time Vision Indicator TradingView">
-  <meta name="viewport" content"width=500">
+  <meta name="viewport" content="width=500">
   <link rel="shortcut icon" href="assets/images/sem-ttulo-copia-3-122x126.png" type="image/x-icon">
   <meta name="description" content="Meet Time Vision, our CoinPallace Buy/Sell Indicator. Works on all Tradingview markets. Simply the best">
   
